--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hg-f19n/gsc-extractor#readme",
   "dependencies": {
-    "puppeteer": "^20.8.2"
+    "puppeteer": "^20.8.2",
+    "yargs": "^17.7.2"
   }
 }
