--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "gsc-reporter",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
+  "bin": {
+    "gsc-reporter": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
