--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/hg-f19n/gsc-reporter#readme",
   "dependencies": {
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.4",
     "puppeteer": "^20.8.2",
     "wtfnode": "^0.9.1",
     "yargs": "^17.7.2"
