--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
+    "markdown-it-container": "^3.0.0",
     "nodemailer": "^6.9.4",
     "puppeteer": "^20.8.2",
     "wtfnode": "^0.9.1",
